graphviz/main/default/objects/Graphviz_AutoBuild__mdt/Graphviz_AutoBuild__mdt.object-meta.xml
<CustomObject>
    <description>Autobuild metadata records are loaded in the Diagram Lightning UI as types of AutoBuilds i.e. options in the select list.

In Apex they are translated into AutoBuild.BuilderSourceType instances so must have all fields used in the constructor for that class.</description>
    <label>Graphviz AutoBuild</label>
    <pluralLabel>Graphviz AutoBuilds</pluralLabel>
</CustomObject>