graphviz/main/default/objects/Graphviz_AutoBuild__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>The name of the Apex class that implements the AutoBuilder interface</description>
    <label>Apex Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>