graphviz/main/default/objects/Graphviz_AutoBuild__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description displayed to the user in the UI.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>