graphviz/main/default/objects/Graphviz_AutoBuild__mdt/fields/Lightning_Config_Component__c.field-meta.xml
<CustomField>
    <fullName>Lightning_Config_Component__c</fullName>
    <description>The name of the component used to collect data before initiating an auto-build. If empty, no data will be collected.</description>
    <label>Lightning Config Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>